latest commit as of 18/02/2020 morning

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Simon</title>
 </head>
 <body>
-    <h1>Simon - The Memory Game</h1>
+    <h1>Simon - The 1980's Memory Game</h1>
     <div class="container">
         <div class="green box" id="greenQuad">1-green</div>
         <div class="red box" id="redQuad">2-red</div>
