added start/reset button, which populates an array of 50x computer moves

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 <body>
     <h1>Simon - The 1980's Memory Game</h1>
+    <button id="start-reset">Start/Reset?</button>
     <div class="container">
         <div class="green box" id="greenQuad">0-green</div>
         <div class="red box" id="redQuad">1-red</div>
         <div class="yellow box" id="yellowQuad">2-yellow</div>
         <div class="blue box" id="blueQuad">3-blue</div>
     </div>
+    <h2 class="count">How many turns? XX</h2>
 </body>
 </html>
