added basic hover effects on panel

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="yellow box" id="yellowQuad">2-yellow</div>
         <div class="blue box" id="blueQuad">3-blue</div>
     </div>
-    <h2 class="count">How many turns? XX</h2>
+    <div id="inner-circle"></div>
+    <h2 class="count">Count goes here XX</h2>
 </body>
 </html>
