centered Start/Reset button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <title>Simon</title>
 </head>
 <body>
-    <h1>Simon - The 1980's Memory Game</h1>
-    <button id="start-reset">Start/Reset?</button>
+    <div class="wrapper">
+        <h1>Simon - The 1980's Memory Game</h1>
+        <button id="start-reset">Start/Reset?</button>
+    </div>
     <div class="container">
         <div class="green box" id="greenQuad">0-green</div>
         <div class="red box" id="redQuad">1-red</div>
