--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <button id="start-reset">Start/Reset?</button>
     </div>
     <div class="container">
-        <div class="green box" id="greenQuad">0-green</div>
-        <div class="red box" id="redQuad">1-red</div>
-        <div class="yellow box" id="yellowQuad">2-yellow</div>
-        <div class="blue box" id="blueQuad">3-blue</div>
+        <div class="green box" id="greenQuad">0</div>
+        <div class="red box" id="redQuad">1</div>
+        <div class="yellow box" id="yellowQuad">2</div>
+        <div class="blue box" id="blueQuad">3</div>
     </div>
     <div id="inner-circle"></div>
     <h2 class="count">Count goes here XX</h2>
