tweaked CSS style for start/reset button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <h1>Simon - The 1980's Memory Game</h1>
-        <button id="start-reset">Start/Reset?</button>
+        <button id="start-reset">Start / Reset</button>
     </div>
     <div class="container">
         <div class="green box" id="greenQuad"></div>
