--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1>Simon - The 1980's Memory Game</h1>
-        <button id="start-reset">Start / Reset</button>
+        <!-- <h1>Simon - The 1980's Memory Game</h1> -->
+        <button id="start-reset">CLICK to start!</button>
     </div>
     <div class="container">
         <div class="green box" id="greenQuad"></div>
@@ -23,6 +23,6 @@
         <div class="blue box" id="blueQuad"></div>
     </div>
     <div id="inner-circle"></div>
-    <h2 class="count">Count goes here XX</h2>
+    <!-- <h2 class="count">Count goes here XX</h2> -->
 </body>
 </html>
