--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
     <script src="app.js"></script>
+    <script src="tone.js"></script>
     <title>Simon</title>
 </head>
 <body>
