player buttons sounds added...but no computer sounds yet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     crossorigin="anonymous"></script>
     <script src="app.js"></script>
     <script src="tone.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.5.35/Tone.js"></script>
     <title>Simon</title>
 </head>
 <body>
